eddit the code to run very well

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My First Templet</title>
     <!-- main style -->
-    <link rel="stylesheet" href="/mainCss/stylesheet.css" />
+    <link rel="stylesheet" href="./mainCss/stylesheet.css" />
     <!-- normalize -->
-    <link rel="stylesheet" href="/mainCss/normalize.css" />
+    <link rel="stylesheet" href="./mainCss/normalize.css" />
     <!-- font awsom -->
-    <link rel="stylesheet" href="/mainCss/all.min.css" />
+    <link rel="stylesheet" href="./mainCss/all.min.css" />
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -122,7 +122,7 @@
             </div>
           </div>
            <div class="image">
-             <img src="/images/services.jpg" alt="services image">
+             <img src="./images/services.jpg" alt="services image">
            </div>
         </div>
     </section>
@@ -138,21 +138,21 @@
         </div>
         <div class="projects">
           <div class="project">
-            <img src="/images/portfolio-1.jpg" alt="">
+            <img src="./images/portfolio-1.jpg" alt="">
               <h3>Project Here</h3>
               <p>
                 My creative ability is very difficult to measure because it can manifest in so many surprising and.
               </p>
           </div>
           <div class="project">
-            <img src="/images/portfolio-2.jpg" alt="">
+            <img src="./images/portfolio-2.jpg" alt="">
               <h3>Project Here</h3>
               <p>
                 My creative ability is very difficult to measure because it can manifest in so many surprising and.
               </p>
           </div>
           <div class="project">
-            <img src="/images/portfolio-3.jpg" alt="">
+            <img src="./images/portfolio-3.jpg" alt="">
               <h3>Project Here</h3>
               <p>
                 My creative ability is very difficult to measure because it can manifest in so many surprising and.
@@ -171,7 +171,7 @@
         </div>
         <div class="about-info">
           <div class="about-image">
-            <img src="/images/about.jpg" alt="" />
+            <img src="./images/about.jpg" alt="" />
           </div>
           <div class="text">
             <p>
@@ -218,11 +218,8 @@
     <footer class="main-footer">
       <div class="container">
         <p>
-          &copy; 2021
           <span>
             <a href="https://www.facebook.com/alikadhim20/">Ali Kadhim</a>
-          </span>
-          All Right Reserved
         </p>
       </div>
     </footer>
