--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
           </div>
           <ul>
             <li><a href="#Services">Services</a></li>
-            <li><a href="#Portfolio">Portfolio</a></li>
-            <li><a href="#About">About</a></li>
-            <li><a href="#Contact">Contact</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -82,7 +82,7 @@
     </section>
     <!-- End feature -->
     <!-- start services -->
-    <section class="services">
+    <section class="services" id="Services">
       <div class="container">
         <div class="sec-title">
           <h1>Services</h1>
@@ -128,7 +128,7 @@
     </section>
     <!-- End services -->
     <!-- start portfolio -->
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
       <div class="container">
         <div class="sec-title">
           <h1>Portfolio</h1>
@@ -163,7 +163,7 @@
     </section>
     <!-- End portfolio -->
     <!-- start about -->
-    <section class="about">
+    <section class="about" id="about">
       <div class="container">
         <div class="sec-title">
           <h1>About</h1>
@@ -192,7 +192,7 @@
     </section>
     <!-- End about -->
     <!-- start contact -->
-    <section class="contact">
+    <section class="contact" id="contact">
       <div class="container">
         <div class="sec-title">
           <h1>Contact</h1>
@@ -201,7 +201,7 @@
         <div class="info">
           <div class="main-contact">
             <p>Feel free to drop us a line at:</p>
-            <a href="mailto:ali20140022@gmial.com">leonagency@mail.com</a>
+            <a href="mailto:alikadhim193@gmail.com">alikadhim193@gmail.com</a>
           </div>
           <div class="social-links">
             <p>Find Us On Social Networks
