--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <div class="container">
         <p>
           <span>
-            <a href="https://www.facebook.com/alikadhim20/">Ali Kadhim</a>
+            <a href="#">Ali Kadhim</a>
         </p>
       </div>
     </footer>
